# telegram-ai-reminder-bot

./: .gitignore  CLAUDE.md  DEBUGGING.md  Dockerfile  README.md  docker-compose.yml  main.py  protocols.py  pyproject.toml  server.py  utils.py  validation.py
core/: __init__.py  auth.py  user_tokens.py
managers/: adapters.py  agent_manager.py  config_manager.py  google_services_manager.py  logging_manager.py  schedule_manager.py  storage_manager.py
tests/: test_schedule_manager.py  test_storage_manager.py
ui/: base.py
ui/telegram/: __init__.py  app.py  error_handlers.py  handlers.py  user_tokens.py  validator.py
ui/web/: __init__.py  app.py  error_handlers.py  handlers.py  validator.py
